update information in the new branch

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         alt="this picture from google"
         style ="width:100; max-width: 960px;">
     </div>
+    <p> this is about my knowledge</p>
 </body>
 </html>
