--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     style="width:100; max-width:890px;">
     <p>this is the information from merger branch.</p>
     </div>
+    <br>
+    <p> add the extrea info.</p>
 </body>
 </html>
